@@ -1,3 +1,8 @@
+2009-09-02 Dominic Hopf <dmaphy@googlemail.com>
+ * fix an issue with button labels, where some localizations may caused a stack
+   overflow
+ * rember the last targetpath
+
 2009-05-07 Dominic Hopf <dmaphy@googlemail.com>
  * install ttyhelper and geanydebug.so to /usr/lib/geany/
    patch by Chow Loong Jin, thanks!
